Implementa controller e injeção de dependencia da API

--- a/TaskList.Communication/TaskList.Communication.csproj
+++ b/TaskList.Communication/TaskList.Communication.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskList.Domain\TaskList.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
